--- a/index.html
+++ b/index.html
@@ -1,1 +1,34 @@
-<p>Chidera</p>
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>Where I am and Where I Want to Be</title>
+    </head>
+
+    <body>
+    This will be fixed to the right:
+        <nav>
+            <ul>
+                <li><a href="#about"></a>Who I Am</li>
+                <li><a href="#design"></a>How I Discovered My Love for Design</li>
+                <li><a href="#currentStatus"></a>Where I Am</li>
+                <li><a href="#futureStatus"></a>Where I'd Like to Be</li>
+                <li><a href="buildStatus"></a>What I'm Doing To Get There</li>
+            </ul>
+        </nav>
+
+    This will be centered:
+        <h1 id="about">Who I Am</h1>
+            <p>// intro about self (name, school, home state, dreams)</p>
+        <h1 id="design">How I Discovered My Love for Design</h1>
+            <p>// how I got into design and What design means to me</p>
+        <h1 id="currentStatus">Where I Am</h1>
+            <p>// My current skills and past designs (IMGs here)</p>
+        <h1 id="futureStatus">Where I'd Like to Be</h1>
+            <p>// My life goals (Dream job, dream house, dream lifestyle + (IMGs here))</p>
+        <h1 id="buildStatus">What I'm Doing To Get There</h1>
+            <p>// My future skills and how I'll get them (IMGs Here)</p>
+        <h3>Thank you for reading!</h3>
+            <p>If you have any Web/UI Design job opprotunies, please feel free to send them my way :)</p>
+        
+    </body>
+</html>
