Corrected navigaton links

--- a/index.html
+++ b/index.html
@@ -5,18 +5,18 @@
     </head>
 
     <body>
-    This will be fixed to the right:
+    <!--This will be fixed to the right:-->
         <nav>
             <ul>
-                <li><a href="#about"></a>Who I Am</li>
-                <li><a href="#design"></a>How I Discovered My Love for Design</li>
-                <li><a href="#currentStatus"></a>Where I Am</li>
-                <li><a href="#futureStatus"></a>Where I'd Like to Be</li>
-                <li><a href="buildStatus"></a>What I'm Doing To Get There</li>
+                <li><a href="#about">Who I Am</a></li>
+                <li><a href="#design">How I Discovered My Love for Design</a></li>
+                <li><a href="#currentStatus">Where My Skills Are</a></li>
+                <li><a href="#futureStatus">Where I'd Like Them To Be</a></li>
+                <li><a href="buildStatus">What I'm Doing To Get There</a></li>
             </ul>
         </nav>
 
-    This will be centered:
+    <!--To be centered-->
         <h1 id="about">Who I Am</h1>
             <p>// intro about self (name, school, home state, dreams)</p>
         <h1 id="design">How I Discovered My Love for Design</h1>
@@ -24,11 +24,10 @@
         <h1 id="currentStatus">Where I Am</h1>
             <p>// My current skills and past designs (IMGs here)</p>
         <h1 id="futureStatus">Where I'd Like to Be</h1>
-            <p>// My life goals (Dream job, dream house, dream lifestyle + (IMGs here))</p>
+            <p>// My career goals (Dream job and dream lifestyle/worklife + (IMGs here))</p>
         <h1 id="buildStatus">What I'm Doing To Get There</h1>
             <p>// My future skills and how I'll get them (IMGs Here)</p>
         <h3>Thank you for reading!</h3>
             <p>If you have any Web/UI Design job opprotunies, please feel free to send them my way :)</p>
-        
     </body>
 </html>
