Another correction to the nav was made.

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
                 <li><a href="#design">How I Discovered My Love for Design</a></li>
                 <li><a href="#currentStatus">Where My Skills Are</a></li>
                 <li><a href="#futureStatus">Where I'd Like Them To Be</a></li>
-                <li><a href="buildStatus">What I'm Doing To Get There</a></li>
+                <li><a href="#buildStatus">What I'm Doing To Get There</a></li>
             </ul>
         </nav>
 
