Modified HTML to work as flex boxes using CSS. Navigation was updated. A header and footer was created as well.

--- a/index.html
+++ b/index.html
@@ -1,33 +1,46 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Where I am and Where I Want to Be</title>
+        <title>Current State vs. Future State</title>
+        <link rel="stylesheet" type="text/css" href="reset.css">
+        <link rel="stylesheet" type="text/css" href="style.css">
     </head>
 
     <body>
     <!--This will be fixed to the right:-->
-        <nav>
-            <ul>
-                <li><a href="#about">Who I Am</a></li>
-                <li><a href="#design">How I Discovered My Love for Design</a></li>
-                <li><a href="#currentStatus">Where My Skills Are</a></li>
-                <li><a href="#futureStatus">Where I'd Like Them To Be</a></li>
-                <li><a href="#buildStatus">What I'm Doing To Get There</a></li>
-            </ul>
-        </nav>
+      <div class="wrapper">
+            <header class="header">Current State vs. Future State of Self</header>
+            
+            <aside class="aside aside-1">
+                <nav>
+                    <ul>
+                        <li><a href="#about">Who I Am</a></li>
+                        <li><a href="#design">How I Discovered My Love for Design</a></li>
+                        <li><a href="#currentStatus">Where My Skills Are</a></li>
+                        <li><a href="#futureStatus">Where I'd Like Them To Be</a></li>
+                        <li><a href="#buildStatus">What I'm Doing To Get There</a></li>
+                    </ul>
+                </nav>
+            </aside>
+                
+            <article class="main">
+                <h1 id="about">Who I Am</h1>
+                    <p>// intro about self (name, school, home state, dreams)</p>
+                <h1 id="design">How I Discovered My Love for Design</h1>
+                    <p>// how I got into design and What design means to me</p>
+                <h1 id="currentStatus">Where I Am</h1>
+                    <p>// My current skills and past designs (IMGs here)</p>
+                <h1 id="futureStatus">Where I'd Like to Be</h1>
+                    <p>// My career goals (Dream job and dream lifestyle/worklife + (IMGs here))</p>
+                <h1 id="buildStatus">What I'm Doing To Get There</h1>
+                    <p>// My future skills and how I'll get them (IMGs Here)</p>
+            </article>
 
-    <!--To be centered-->
-        <h1 id="about">Who I Am</h1>
-            <p>// intro about self (name, school, home state, dreams)</p>
-        <h1 id="design">How I Discovered My Love for Design</h1>
-            <p>// how I got into design and What design means to me</p>
-        <h1 id="currentStatus">Where I Am</h1>
-            <p>// My current skills and past designs (IMGs here)</p>
-        <h1 id="futureStatus">Where I'd Like to Be</h1>
-            <p>// My career goals (Dream job and dream lifestyle/worklife + (IMGs here))</p>
-        <h1 id="buildStatus">What I'm Doing To Get There</h1>
-            <p>// My future skills and how I'll get them (IMGs Here)</p>
-        <h3>Thank you for reading!</h3>
-            <p>If you have any Web/UI Design job opprotunies, please feel free to send them my way :)</p>
+            <footer class="footer">
+                <h2>Thank you for reading!</h2> <br>
+                <p>If you have any job opprotunies that focus on Web/UI Design, please feel free to send them to <a href="mailto:chideraobinali1@GMAIL.COM?SUBJECT = WEB/UI DESIGN JOB OPPROTUNITY">chideraobinali1@gmail.com</a>.</p>
+            </footer>
+
+        </div>
     </body>
 </html>
