--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             </aside>
                 
             <article class="main">
-                <h1 id="about">About Me 😉</h1>
+                <h1 id="about">About Me</h1>
                     <p>// Introduction<br><br>
                     <img src="./images/about_me.jpg" class="img-right" width="250px">
                     
